# pynapl

./: .gitignore  APL.py  APLBridgeSlave.py  APLPyConnect.py  Array.py  LICENSE  MANIFEST.in  Py.dyalog  PyTest.dyalog  README.md  RunDyalog.py  WinPySlave.dyapp  aplcore.REMOVED.git-id  pyproject.toml  setup.py
aplpy/: APL.py  APLBridgeSlave.py  APLPyConnect.py  Array.py  IPC.dyalog  IPC.py  Interrupt.py  Py.dyalog  PyTest.dyalog  RunDyalog.py  Util.py  WinDyalog.py  WinPySlave.dyalog  WinPySlave.dyapp
aplpy/test/: test_APL.py
demos/game_of_life/: README.md  gol.py  requirements.txt
demos/google_sheets/: FetchDemoGSpreadData.aplf  README.md  pynapl-gspread-demo-key.json  requirements.txt  test_access.py
demos/language_recogniser/: README.md  recogniser.py
demos/language_recogniser/data/: en_trigram_count_filtered.tsv  es_trigram_count_filtered.tsv  fr_trigram_count_filtered.tsv  pt_trigram_count_filtered.tsv
demos/mandelbrot/: CreateImage.aplf  Grid.aplf  Mandelbrot.aplf  Palette.aplf  README.md
pynapl/: APL.py  APLBridgeSlave.py  APLPyConnect.py  Array.py  ConversionInterface.py  IPC.dyalog  IPC.py  Interrupt.py  ObjectWrapper.py  Proxies.apln  Py.dyalog  PyEvaluator.py  PyTest.dyalog  RunDyalog.py  Util.py  WinDyalog.py  WinPySlave.dyalog  apl_proxies.py  proxies.py
pynapl/test/: Test.dyalog  test_APL.py  test_Array.py
tests/: Test.dyalog  test_APL.py  test_Array.py  test_apl_proxy_conversions.py
