[tool.poetry]
name = "pynapl"
version = "0.1.0"
description = "Dyalog APL and Python interface."
authors = ["Marinus", "Rodrigo Girão Serrão <rodrigo@dyalog.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
rich = "^12.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
